--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,64 +1,17 @@
 {
-  "name": "Android APK Builder",
+  "name": "Android Development Environment",
   "build": {
-    "dockerfile": "Dockerfile",
-    "args": {
-      "ANDROID_SDK_VERSION": "9477386",
-      "ANDROID_PLATFORM": "android-34",
-      "NDK_VERSION": "25.2.9519653",
-      "JAVA_VERSION": "17",
-      "GRADLE_VERSION": "8.5"
-    }
+    "dockerfile": "Dockerfile"
   },
+  
   "customizations": {
     "vscode": {
       "extensions": [
-        "ms-vscode.cpptools",
-        "visualstudioexptteam.vscodeintellicode",
-        "ms-vscode.makefile-tools",
         "vscjava.vscode-java-pack",
-        "vscjava.vscode-gradle",
-        "naco-siren.gradle-language",
-        "github.vscode-github-actions",
-        "ms-vscode-remote.remote-ssh"
-      ],
-      "settings": {
-        "java.home": "/usr/lib/jvm/java-17-openjdk-amd64",
-        "java.configuration.runtimes": [
-          {
-            "name": "JavaSE-17",
-            "path": "/usr/lib/jvm/java-17-openjdk-amd64",
-            "default": true
-          }
-        ]
-      }
+        "vscjava.vscode-gradle"
+      ]
     }
   },
-  "features": {
-    "ghcr.io/devcontainers/features/android-sdk:1": {
-      "version": "latest",
-      "ndk": "25.2.9519653",
-      "cmake": "3.22.1",
-      "platforms": "android-34",
-      "buildTools": "34.0.0",
-      "emulator": false,
-      "acceptLicenses": true
-    },
-    "ghcr.io/devcontainers/features/docker-in-docker:2": {},
-    "ghcr.io/devcontainers/features/git:1": {},
-    "ghcr.io/devcontainers/features/github-cli:1": {}
-  },
-  "runArgs": [
-    "--privileged"
-  ],
-  "containerEnv": {
-    "ANDROID_HOME": "/opt/android-sdk",
-    "ANDROID_SDK_ROOT": "/opt/android-sdk",
-    "JAVA_HOME": "/usr/lib/jvm/java-17-openjdk-amd64",
-    "GRADLE_USER_HOME": "/workspaces/.gradle"
-  },
-  "postCreateCommand": "echo 'Android development environment ready!' && android-sdk-install",
-  "postStartCommand": "sudo chmod -R 777 /opt/android-sdk && sudo chmod -R 777 /workspaces/.gradle",
-  "forwardPorts": [5037],
+  
   "remoteUser": "vscode"
 }
