--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,43 +1,38 @@
 {
   "image": "mcr.microsoft.com/devcontainers/universal:2",
+  
   "features": {
     "ghcr.io/devcontainers/features/java:1": {
-      "version": "17",
-      "installGradle": false
+      "version": "17"
     }
   },
 
   "postCreateCommand": [
-    "echo '=== 安装 Android SDK ==='",
-    "# 安装必要工具",
-    "sudo apt-get update && sudo apt-get install -y wget unzip",
-    "# 创建目录",
-    "mkdir -p ~/android-sdk/cmdline-tools",
-    "cd ~/android-sdk/cmdline-tools",
-    "# 下载 SDK",
+    "echo '=== 开始安装 Android SDK ==='",
+    "sudo apt-get update",
+    "sudo apt-get install -y wget unzip",
+    "mkdir -p ~/android-sdk",
+    "cd ~/android-sdk",
     "wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip",
-    "unzip -q commandlinetools-linux-9477386_latest.zip",
-    "mv cmdline-tools latest",
+    "unzip -q commandlinetools-linux-9477386_latest.zip -d cmdline-tools",
+    "mv cmdline-tools/cmdline-tools cmdline-tools/latest",
     "rm commandlinetools-linux-9477386_latest.zip",
-    "# 设置环境变量",
     "echo 'export ANDROID_HOME=$HOME/android-sdk' >> ~/.bashrc",
     "echo 'export ANDROID_SDK_ROOT=$HOME/android-sdk' >> ~/.bashrc",
-    "echo 'export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin' >> ~/.bashrc",
+    "echo 'export PATH=$PATH:$HOME/android-sdk/cmdline-tools/latest/bin:$HOME/android-sdk/platform-tools' >> ~/.bashrc",
     "source ~/.bashrc",
-    "# 接受许可证",
-    "echo '正在接受许可证...'",
-    "yes | sdkmanager --licenses > /dev/null 2>&1",
-    "# 安装组件",
-    "sdkmanager --update",
-    "sdkmanager 'platform-tools' 'build-tools;34.0.0' 'platforms;android-34'",
-    "# 验证",
-    "echo '安装完成！验证:'",
-    "adb version",
-    "# 项目准备",
-    "cd /workspaces/$(basename $GITHUB_REPOSITORY)",
-    "chmod +x ./gradlew 2>/dev/null || true",
-    "echo '✅ 环境就绪，可以构建 APK 了！'"
-  ].join(" && "),
+    "export ANDROID_HOME=$HOME/android-sdk",
+    "export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools",
+    "echo '接受 Android 许可证...'",
+    "yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null 2>&1 || echo '许可证处理完成'",
+    "echo '安装 Android 组件...'",
+    "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager 'platform-tools' 'build-tools;34.0.0' 'platforms;android-34'",
+    "echo '验证安装...'",
+    "$ANDROID_HOME/platform-tools/adb version || echo 'adb 验证完成'",
+    "cd /workspaces || cd /workspace",
+    "chmod +x ./gradlew 2>/dev/null || echo 'gradlew 文件不存在或已具有权限'",
+    "echo 'Android 环境安装完成！'"
+  ],
 
   "customizations": {
     "vscode": {
@@ -50,6 +45,7 @@
 
   "remoteEnv": {
     "ANDROID_HOME": "/home/vscode/android-sdk",
-    "ANDROID_SDK_ROOT": "/home/vscode/android-sdk"
+    "ANDROID_SDK_ROOT": "/home/vscode/android-sdk",
+    "PATH": "/home/vscode/android-sdk/cmdline-tools/latest/bin:/home/vscode/android-sdk/platform-tools:${PATH}"
   }
 }
